# Server2_backup

./: .gitignore  README.md
develop/: .api_timeseries.py  .transfer_event_table_data.py  device_status.py  devices.json  iot_data.py  kafka_linecross_check.py  request_body.py  rtsp_stream.py  sensor_collector_heartbeat.txt  test_kafka.py
develop/.tp_status_history/: tp_status_history.py
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/: CMakeLists.txt
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/edgedetect_cuda/: CMakeLists.txt  edgedetect_cuda.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/edgedetect_opencl/: CMakeLists.txt  edgedetect_opencl.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/getting_started/: CMakeLists.txt  getting_started.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/mc28/: CMakeCache.txt  CMakeLists.txt  opencv.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/opencv/: CMakeCache.txt  CMakeLists.txt  mc17.cpp  mc18.cpp  mc19.cpp  mc20.cpp  mc21.cpp  mc22.cpp  mc25.cpp  mc26.cpp  mc27.cpp  mc28.cpp  mc29.cpp  mc30.cpp  opencv.cpp  opencv_2.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/opencv_cap/: CMakeLists.txt  opencv_cap.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/trigger_cap/: opencv_cap.cpp
develop/Baumer_neoAPI_1.4.1_lin_x86_64_cpp/examples/src/user_buffer/: CMakeLists.txt  user_buffer.cpp
develop/DQ/cameras/: eye_mark_mc17.py  eye_mark_mc17_sunsilk.py  leaping_sensor_mc17.py  mc_17_test_red_tape_client.py  reconnecting_camera.py  reconnecting_camera_eol.py  reconnecting_camera_loop3_v1.py  reconnecting_tapping_camera_loop4.py
develop/DQ/consumers/: A_L3.py  TEST_LOOP3.py  TEST_LOOP4.py  Test_l3_tapping_v1.py  Test_l4_tapping_v1.py  jamming_zones_v1.json  jamming_zones_v1_demo.json  read_loop3_kafka.py  saved_images.py  zone_status_l3_tapping_demo.json  zone_status_l4_tapping_demo.json  zone_status_loop3_demo.json  zone_status_loop4_demo.json
develop/DQ/modbus/: python.txt  read_check_weigher_loop3.py  read_check_weigher_loop4.py  read_machine_28.py  read_mc28.py  read_mc29.py  test_read.py
develop/DQ/mqtt/: read_loop4.py  read_loop4_2.py  read_loop4_25_26.py  read_loop4_25_26_og.py  read_loop4_27_30.py  read_loop4_27_30_updated.py
develop/DQ/plc/: api_data.csv  insert_history.py  loop3_checkpoints.py  loop3_sku.py  loop4_sku.py  loop_3_overview.py  loop_4_overview.py  read_graphs.py  read_plc_17.py  read_plc_18.py  read_plc_19.py  read_plc_20.py  read_plc_21.py  read_plc_22.py  read_plc_27_30.py  read_plc_27_30_og.py  read_plc_28_29.py  read_plc_28_29_og.py  read_setpoints.py  read_taping_machines.py  taping_machine.py  test.py  test_graph.py
develop/DQ/plc_tags/: big_data.py  data22.csv  psql_csv.py  read_all_tags.py  read_one_tag.py  read_set_tags.py  read_video.py  test.py  text.txt  write_one_tag.py
develop/DeepStream-Yolo/Deepstream-Triton-Yolo-main/: config_nvdsanalytics_mat_l3l4.txt  deepstream_yolo_det.txt  export-det.py  labels.txt  pgie_yolov8_standalone.txt  yolov8_export_requirements.txt
develop/DeepStream-Yolo/L3-L4_no-rtsp/: LOOP3_app_config.txt  LOOP3_config_infer_secondary_matfilling.txt  LOOP3_config_infer_secondary_matfilling_l3.txt  LOOP3_config_infer_secondary_matfilling_l4.txt  config_infer_primary_yoloV9.txt  config_nvdsanalytics_loop3.txt  hul_loop3_msg_conv.txt
develop/DeepStream-Yolo/LOOP3/: LOOP3_MJPEG_app_config.txt  LOOP3_MJPEG_app_config_OG.txt  LOOP3_config_infer_secondary_orientation.txt  LOOP3_config_infer_secondary_orientation_left.txt  config_nvdsanalytics_loop3.txt
develop/DeepStream-Yolo/LOOP4/: LOOP4_MJPEG_app_config.txt  LOOP4_RTSP_app_config.txt  config_infer_primary_yoloV9.txt  config_nvdsanalytics_loop4.txt
develop/DeepStream-Yolo/labels/: hul.txt  labels_mt_l3.txt  labels_orientation_right.txt
develop/DeepStream-Yolo_backup_sep5/L3-L4_no-rtsp/: LOOP3_app_config.txt  LOOP3_config_infer_secondary_taping.txt  config_infer_primary_yoloV9.txt  config_nvdsanalytics_loop3.txt  hul_loop3_msg_conv.txt
develop/DeepStream-Yolo_backup_sep5/LOOP3/: LOOP3_config_infer_secondary_taping.txt  config_nvdsanalytics_loop3.txt
develop/DeepStream-Yolo_backup_sep5/LOOP4/: LOOP4_config_infer_secondary_matfilling.txt  LOOP4_config_infer_secondary_orientation_left.txt  LOOP4_config_infer_secondary_orientation_right.txt  LOOP4_config_infer_secondary_taping.txt  backup_LOOP4_MJPEG_app_config.txt  config_infer_primary_yoloV9.txt
develop/DeepStream-Yolo_backup_sep5/labels/: labels_mt_l4.txt  labels_orientation_left.txt
develop/DeepStream-Yolo_backup_sep5/utils/: export_yoloV8.py
develop/DeepStream-Yolo_old/L3-L4_no-rtsp/: LOOP3_app_config.txt  LOOP3_config_infer_secondary_matfilling.txt  config_infer_primary_yoloV9.txt  config_nvdsanalytics_loop3.txt
develop/DeepStream-Yolo_old/LOOP3/: LOOP3_MJPEG_app_config.txt  LOOP3_config_infer_secondary_orientation.txt  LOOP3_config_infer_secondary_taping.txt  hul_loop3_msg_conv.txt
develop/DeepStream-Yolo_old/LOOP4/: LOOP4_config_infer_secondary_orientation.txt  LOOP4_config_infer_secondary_taping.txt
develop/DeepStream-Yolo_old/labels/: labels_taping.txt
develop/HUL-Laminate-UI/backend/: calculateStrokes.py  config.json  config_handler_backup.py  database.py  (+9 more)
develop/Orientation_classify/: Kafka_orientation_script.py  mat_filling_linecross.py  mat_filling_linecross_v1.py  mat_filling_linecross_v2.py  save_orientation_script.py  taping_linecross.py  taping_linecross_v2.py
develop/Tower_light/: config.json  test.py  tower_light.py
develop/backup_HUL_CLS1_AI_Recorder/: package-lock.json  package.json
develop/consumer/: commands.txt  kafka_to_memgraph.py  read_kafka.py
develop/device-monitor-cls1/: package-lock.json  package.json
develop/memgraph_consumer/: commands.txt  get_node_names.py  get_zone_status.py  read_kafka.py
develop/test_loop4/: check_kafka_msg.py
develop/test_mjpeg_stream/: loop3_stream.py  reconnecting_camera.py  reconnecting_camera_loop4.py
develop/tp_history/: baumer_tp_history.py  overall_tp_history.py  tp_history.py
(+494 files in other folders)
